# coding

.tmp.driveupload/: 48099  48417  49713  49789  49803  49815  49847  49855  49857  49861  49867  49875  49877  49887  49891  49897  49899  49905  49907  49919  49923  49925  49931  49933  49939  49943  49957  49961  49963  49971  49975  49981  49991  49993  50001  50003  50013  50023  50025  50029  (+931 more)
C++/Basic/01-variables and Data Types/: 01-Exercise.cpp  02-Exercise.cpp  05-Exercise.cpp  06-Exercise.cpp  08-Exercise.cpp  README.md
C++/Basic/01-variables and Data Types/output/: 04.Exercise  05.Exercise  07-Exercise  08-Exercise
C++/Basic/02-Control Flow/: 02.Exercise  02.Exercise.cpp  05.Exercise.cpp
C++/Books/: dummies
C++/Books/C++ for Dummies 7th Edition/: Part1  Part3  Part4  Part5  Part6  Untitled.rtf  part2
C++/Books/C++ for Dummies 7th Edition/Part I - Getting Started with C++ Programming/Chapter 5 - Controlling Program Flow/: README.md
C++/Books/C++ for Dummies 7th Edition/Part II - Becoming a Functional C++ Programmer/Chapter 6 - Creating Functions/: 01.example.cpp  CMakeLists.txt
C++/Levels/03.Level-3/01.Functions/: 01-Exercise.cpp  04-Exercise  04-Exercise.cpp  06-Exercise.cpp  08-Exercise  09-Exercise  10-Exercise.cpp  12-Exercise  13-Exercise.cpp  14-Exercise.cpp  15-Exercise  17-Exercise.cpp
C++/Levels/03.Level-3/02.arrays/: 02.Exercise.cpp  04.Exercise.cpp  05.Exercise.cpp  06.Exercise.cpp  07.Exercise  07.Exercise.cpp  09.Exercise  10.Exercise  10.Exercise.cpp  11.Exercise.cpp  12.Exercise.cpp  13.Exercise.cpp  15.Exercise.cpp  16.Exercise.cpp
C++/Levels/03.Level-3/02.arrays/notes/: 02.Exercise.cpp  04.Exercise
C++/Levels/04.level-better-data/1.string-advanced/: README.md
C++/OOP/: CMakeLists.txt
C++/Planning /: README.md
C++/Planning /03.Level-3/01.Functions/Exercises/: 03-Exercise.cpp  06-Exercise  07-Exercise  07-Exercise.cpp  10-Exercise  18-Exercise.cpp
C++/Planning /03.Level-3/01.Functions/Exercises/output/: 02-Exercise
C++/Planning /03.Level-3/02.arrays/Exercises/: 01.Exercise.cpp  02.Exercise  03.Exercise  03.Exercise.cpp  08.Exercise.cpp  11.Exercise  12.Exercise  13.Exercise  14.Exercise.cpp
C++/Planning /03.Level-3/02.arrays/Exercises/notes/: 01.Exercise.cpp  02.Exercise  03.Exercise.cpp
C++/Planning /03.Level-3/02.arrays/Exercises/output/: 01.Exercise
C++/Planning/02.level-makeing-decisions/Exercises/: CMakeLists.txt  README.md
C++/Planning/02.level-makeing-decisions/Exercises/1-If-Statements/: 01.Exercise  01.Exercise.cpp  02.Exercise  02.Exercise.cpp
C++/Planning/03.Level-3/01.Functions/: 01.Exercise  01.Exercise.cpp  02.Exercise  02.Exercise.cpp  03.Exercise  03.Exercise.cpp  04.Exercise  04.Exercise.cpp  05.Exercise  05.Exercise.cpp  06.Exercise  06.Exercise.cpp  07.Exercise  07.Exercise.cpp  08.Exercise.cpp
C++/Planning/03.Level-3/01.Functions/Exercises/: 05-Exercise  08-Exercise.cpp  12-Exercise.cpp  13-Exercise  14-Exercise  16-Exercise  16-Exercise.cpp  17-Exercise
C++/Planning/03.Level-3/01.Functions/Exercises/output/: 03-Exercise  04-Exercise
C++/Planning/03.Level-3/02.arrays/: 01.Exercise.cpp  02.Exercise  02.Exercise.cpp  03.Exercise  03.Exercise.cpp  04.Exercise.cpp  05.Exercise  05.Exercise.cpp  06.Exercise  06.Exercise.cpp  07.Exercise  07.Exercise.cpp  08.Exercise  08.Exercise.cpp  09.Exercise  09.Exercise.cpp  10.Exercise  10.Exercise.cpp  CMakeLists.txt
C++/Planning/03.Level-3/02.arrays/Exercises/: 04.Exercise  05.Exercise  06.Exercise  08.Exercise  13.Exercise.cpp
C++/Planning/03.Level-3/02.arrays/Exercises/15.Exercise.dSYM/Contents/: Info.plist
C++/Planning/03.Level-3/02.arrays/Exercises/notes/: 01.Exercise  04.Exercise.cpp  README.md
C++/Planning/03.Level-3/02.arrays/Exercises/output/: scratch_6
C++/Planning/03.Level-3/Past /27-09-2025-Sat/01.Functions/Exercises/: 02-Exercise.cpp  05-Exercise.cpp  09-Exercise.cpp  15-Exercise.cpp  README.md
C++/Planning/04.level-better-data/1.string-advanced/: 01.Exercise  01.Exercise.cpp
C++/Planning/04.level-better-data/1.string-advanced/Coding/: README.md
C++/Planning/04.level-better-data/1.string-advanced/Exercises/: CMakeLists.txt
C++/Planning/04.level-better-data/2.vectors/Coding/: CMakeLists.txt
C++/Planning/04.level-better-data/2.vectors/Exercises/: 01.Exercise.cpp  README.md
C++/Planning/05.level-OOP/: CMakeLists.txt  README.md
C++/Planning/05.level-OOP/Exercises/: 01.Exercises.cpp  01.Exerices  01.Exerices.cpp  02.Exercises.cpp  02.Exerices  02.Exerices.cpp  03.Exercises  03.Exercises.cpp  03.Exerices  03.Exerices.cpp  04.Exercises  04.Exerices  04.Exerices.cpp  05.Exercises  05.Exerices  05.Exerices.cpp  06.Exerices  06.Exerices.cpp  07.Exercises.cpp  07.Exerices  07.Exerices.cpp  08.Exercises.cpp  08.Exerices  08.Exerices.cpp  README 1.13.38 PM.md
C++/Planning/05.level-OOP/Exercises/03.Exercises.dSYM/Contents/: Info.plist
C++/Planning/05.level-OOP/Exercises/03.Exercises.dSYM/Contents/Resources/DWARF/: 03.Exercises
C++/Planning/05.level-OOP/past/27-9-2025/: 02.Exercises  04.Exercises.cpp  05.Exercises.cpp  06.Exercises  06.Exercises.cpp  07.Exercises  08.Exercises  09.Exercises  09.Exercises.cpp  CMakeLists.txt
C++/Planning/05.level-OOP/past/27-9-2025/03.Exercises.dSYM/Contents/Resources/Relocations/aarch64/: 03.Exercises.yml
C++/Planning/05.level-OOP/past/27-9-2025/output/: 01.Exercises
C++/Planning/05.level-OOP/past/27-9-2025/output/01.Exercises.dSYM/Contents/: Info.plist
C++/Planning/05.level-OOP/past/27-9-2025/output/01.Exercises.dSYM/Contents/Resources/DWARF/: 01.Exercises
C++/Planning/05.level-OOP/past/27-9-2025/output/01.Exercises.dSYM/Contents/Resources/Relocations/aarch64/: 01.Exercises.yml
C++/Problem-sloving/: README.md
C++/Project_Exercise/Programming-I/: 03-ingredients.cpp  README.md
C++/Project_Exercise/YouTube/: CMakeLists.txt
C++/Project_Exercise/YouTube/01.functions/: 01.cpp
Java/Lesson/Bro Code/src/: Lesson02.java  Lesson03.java  main.java
Java/Lesson/src /: HelloWorld.java  TaskManager.java
mynote/: note-courese.doc
(+11 files in other folders)
