cmake_minimum_required(VERSION 4.0)
project(05_level_OOP)

set(CMAKE_CXX_STANDARD 14)

add_executable(05_level_OOP
        Exercises/01.Exercises.cpp
        Exercises/02.Exercises.cpp
        Exercises/03.Exercises.cpp
        Exercises/04.Exercises.cpp
        Exercises/05.Exercises.cpp
        Exercises/06.Exercises.cpp
        Exercises/07.Exercises.cpp
        Exercises/08.Exercises.cpp
        Exercises/09.Exercises.cpp
        Exercises/10.Exercises.cpp
        Exercises/11.Exercises.cpp
        Exercises/12.Exercises.cpp
        Exercises/13.Exercises.cpp
        Exercises/14.Exercises.cpp
        Exercises/15.Exercises.cpp
        Exercises/16.Exercises.cpp
        Exercises/17.Exercises.cpp
        Exercises/18.Exercises.cpp
        Exercises/19.Exercises.cpp
        Exercises/20.Exercises.cpp
        Exercises/21.Exercises.cpp
        Exercises/22.Exercises.cpp
        Exercises/23.Exercises.cpp
        Exercises/24.Exercises.cpp
        Exercises/25.Exercises.cpp
        Exercises/26.Exercises.cpp
        Exercises/27.Exercises.cpp
        Exercises/28.Exercises.cpp
        Exercises/29.Exercises.cpp
        Exercises/30.Exercises.cpp
        Exercises/31.Exercises.cpp
        Exercises/32.Exercises.cpp
        Exercises/33.Exercises.cpp
        Exercises/34.Exercises.cpp
        Exercises/35.Exercises.cpp
        Exercises/36.Exercises.cpp
        Exercises/37.Exercises.cpp
        Exercises/38.Exercises.cpp
        Exercises/39.Exercises.cpp
        Exercises/40.Exercises.cpp)
