cmake_minimum_required(VERSION 4.0)
project(Exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercises
        1-If-Statements/01.Exercise.cpp
        1-If-Statements/02.Exercise.cpp
        1-If-Statements/03.Exercise.cpp
        1-If-Statements/04.Exercise.cpp
        1-If-Statements/05.Exercise.cpp
        1-If-Statements/06.Exercise.cpp
        1-If-Statements/07.Exercise.cpp
        1-If-Statements/08.Exercise.cpp
        1-If-Statements/09.Exercise.cpp
        1-If-Statements/10.Exercise.cpp
        1-If-Statements/11.Exercise.cpp
        1-If-Statements/12.Exercise.cpp
        1-If-Statements/13.Exercise.cpp
        1-If-Statements/14.Exercise.cpp
        1-If-Statements/15.Exercise.cpp
        1-If-Statements/16.Exercise.cpp
        1-If-Statements/17.Exercise.cpp
        1-If-Statements/18.Exercise.cpp
        1-If-Statements/19.Exercise.cpp
        1-If-Statements/20.Exercise.cpp)
