cmake_minimum_required(VERSION 4.0)
project(02_arrays)

set(CMAKE_CXX_STANDARD 14)

add_executable(02_arrays
        01.Exercise.cpp
        02.Exercise.cpp
        03.Exercise.cpp
        04.Exercise.cpp
        05.Exercise.cpp
        06.Exercise.cpp
        07.Exercise.cpp
        08.Exercise.cpp
        09.Exercise.cpp
        10.Exercise.cpp
        11.Exercise.cpp
        12.Exercise.cpp
        13.Exercise.cpp
        14.Exercise.cpp
        15.Exercise.cpp
        16.Exercise.cpp
        17.Exercise.cpp
        18.Exercise.cpp
        19.Exercise.cpp
        20.Exercise.cpp)
