cmake_minimum_required(VERSION 4.0)
project(Chapter_6___Creating_Functions)

set(CMAKE_CXX_STANDARD 14)

add_executable(Chapter_6___Creating_Functions
        01.example.cpp
        02.example.cpp
        03.example.cpp
        04.example.cpp
        05.example.cpp
        06.example.cpp
        07.example.cpp
        08.example.cpp
        09.example.cpp
        10.example.cpp
        11.example.cpp
        12.example.cpp
        13.example.cpp
        14.example.cpp
        15.example.cpp
        16.example.cpp
        17.example.cpp
        18.example.cpp
        19.example.cpp
        20.example.cpp)
