cmake_minimum_required(VERSION 4.0)
project(1_string_advanced)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_string_advanced
        01.Exercise.cpp
        02.Exercise.cpp
        03.Exercise.cpp
        04.Exercise.cpp
        05.Exercise.cpp
        06.Exercise.cpp
        07.Exercise.cpp
        08.Exercise.cpp
        09.Exercise.cpp
        10.Exercise.cpp
        11.Exercise.cpp
        12.Exercise.cpp
        13.Exercise.cpp
        14.Exercise.cpp
        15.Exercise.cpp
        16.Exercise.cpp
        17.Exercise.cpp
        18.Exercise.cpp
        19.Exercise.cpp
        20.Exercise.cpp
        21.Exercise.cpp
        22.Exercise.cpp
        23.Exercise.cpp
        24.Exercise.cpp
        25.Exercise.cpp
        26.Exercise.cpp
        27.Exercise.cpp
        28.Exercise.cpp
        29.Exercise.cpp
        30.Exercise.cpp
        31.Exercise.cpp
        32.Exercise.cpp
        33.Exercise.cpp
        34.Exercise.cpp
        35.Exercise.cpp
        36.Exercise.cpp
        37.Exercise.cpp
        38.Exercise.cpp
        39.Exercise.cpp
        40.Exercise.cpp)
