cmake_minimum_required(VERSION 4.0)
project(Coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding
        01.Example.cpp
        02.Example.cpp
        03.Example.cpp
        04.Example.cpp
        05.Example.cpp
        06.Example.cpp
        07.Example.cpp
        08.Example.cpp
        09.Example.cpp
        10.Example.cpp
        11.Example.cpp
        12.Example.cpp
        13.Example.cpp
        14.Example.cpp
        15.Example.cpp
        16.Example.cpp
        17.Example.cpp
        18.Example.cpp
        19.Example.cpp
        20.Example.cpp
        ../Exercises/01.Exercise.cpp)
