cmake_minimum_required(VERSION 4.0)
project(Exercises)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exercises
        01.Exercises.cpp
        02.Exercises.cpp
        03.Exercises.cpp
        04.Exercises.cpp
        05.Exercises.cpp
        06.Exercises.cpp
        07.Exercises.cpp
        08.Exercises.cpp
        09.Exercises.cpp
        10.Exercises.cpp
        11.Exercises.cpp
        12.Exercises.cpp
        13.Exercises.cpp
        14.Exercises.cpp
        15.Exercises.cpp
        16.Exercises.cpp
        17.Exercises.cpp
        18.Exercises.cpp
        19.Exercises.cpp
        20.Exercises.cpp
        21.Exercises.cpp
        22.Exercises.cpp
        23.Exercises.cpp
        24.Exercises.cpp
        25.Exercises.cpp
        26.Exercises.cpp
        27.Exercises.cpp
        28.Exercises.cpp
        29.Exercises.cpp
        30.Exercises.cpp
        31.Exercises.cpp
        32.Exercises.cpp
        33.Exercises.cpp
        34.Exercises.cpp
        35.Exercises.cpp
        36.Exercises.cpp
        37.Exercises.cpp
        38.Exercises.cpp
        39.Exercises.cpp
        40.Exercises.cpp)
